Prevent pull to refresh on mobile

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -24,6 +24,7 @@ body {
 	height: 100%;
 	justify-content: center;
 	margin: 0;
+	overscroll-behavior-y: contain;
 	width: 100%;
 }
 
